syntax = "proto3";
option csharp_namespace = "MonsterClicker.ViewModels.Protos";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

message GameViewModelState {
  string monster_name = 1;
  string monster_max_health = 2;
  string monster_current_health = 3;
  string player_damage = 4;
  string game_message = 5;
  string is_monster_defeated = 6;
  string can_use_special_attack = 7;
  string is_special_attack_on_cooldown = 8;
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message AttackMonsterRequest {}
message AttackMonsterResponse {}

message SpecialAttackAsyncRequest {}
message SpecialAttackAsyncResponse {}

message ResetGameRequest {}
message ResetGameResponse {}

service GameViewModelService {
  rpc GetState (google.protobuf.Empty) returns (GameViewModelState);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (google.protobuf.Empty);
  rpc SubscribeToPropertyChanges (google.protobuf.Empty) returns (stream PropertyChangeNotification);
  rpc AttackMonster (AttackMonsterRequest) returns (AttackMonsterResponse);
  rpc SpecialAttackAsync (SpecialAttackAsyncRequest) returns (SpecialAttackAsyncResponse);
  rpc ResetGame (ResetGameRequest) returns (ResetGameResponse);
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty);
}
